# trace-pin

./: CMakeLists.txt  README.md
proto/: trace.proto  trace_with_chunk.proto
src/: main.cpp  makefile.rules  print_value.cpp  trace.proto
src/lib/cap/: cap.h  graph.cpp  parser.cpp  trace.h  tracer.cpp
src/lib/type/: instruction.cpp  operand.cpp~  trace.pb.cc  trace.pb.h
src/tracing/: common.h  consumer.cpp  export.h  instruction.cpp  instruction.h  trace.pb.cc  trace_with_chunk.pb.cc  trace_with_chunk.pb.h  tracer.cpp
